# missive

./: .gitignore  README.md  meson.build
build-aux/: fr.bellamy.missive.json  fr.benjaminbellamy.missive.json
data/: fr.bellamy.missive.desktop.in  fr.bellamy.missive.gresource.xml  fr.bellamy.missive.gschema.xml  fr.bellamy.missive.metainfo.xml.in  fr.benjaminbellamy.missive.desktop.in  fr.benjaminbellamy.missive.gresource.xml  fr.benjaminbellamy.missive.gschema.xml  fr.benjaminbellamy.missive.metainfo.xml.in  meson.build
data/ui/: campaign-detail.blp  campaign-dialog.blp  campaigns-view.blp  csv-import-dialog.blp  csv-preview-dialog.blp  csv-sheets-view.blp  help-dialog.blp  identities-view.blp  identity-editor.blp  template-editor.blp  templates-view.blp  window.blp
flathub/: README.md  fr.bellamy.missive.json  fr.benjaminbellamy.missive.json
po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  fr.po  it.po  missive.pot  nl.po
src/: application.vala  campaign-detail.vala  campaign-dialog.vala  campaign-engine.vala  campaign.vala  campaigns-view.vala  config.vala.in  csv-import-dialog.vala  csv-parser.vala  csv-preview-dialog.vala  csv-sheet.vala  csv-sheets-view.vala  database.vala  email-util.vala  help-dialog.vala  html-import.vala  html-serializer.vala  identities-view.vala  identity-editor.vala  identity.vala  json-util.vala  lang.vala  main.vala  meson.build  message-builder.vala  missive-smtp.c  missive-smtp.h  missive-smtp.vapi  secret-store.vala  smtp-sender.vala  substitution.vala  template-editor.vala  template.vala  templates-view.vala  ui-util.vala  window.vala
